--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -20,7 +20,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -45,7 +45,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Progress` component to your project.
 
@@ -53,7 +53,7 @@ This command copies the `Progress` component to your project.
 npx gluestack-ui add progress
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -62,7 +62,7 @@ import { Progress } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The Progress component consists of the following parts:
 
@@ -74,9 +74,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Progress
+#### Progress
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 It has a property `value` which is a number between 0 and 100. It is used to set the progress of the progress bar.
@@ -88,13 +88,13 @@ It also inherits all the properties of React Native's [View](https://reactnative
 <br />
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Progress
+### Customizing the Progress
 
 For customizing the Progress, you have to map styled view to Progress. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
