--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -20,7 +20,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -43,7 +43,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Spinner` component to your project.
 
@@ -51,7 +51,7 @@ This command copies the `Spinner` component to your project.
 npx gluestack-ui add spinner
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -60,7 +60,7 @@ import { Spinner } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The Spinner component consists of the following parts:
 
@@ -68,9 +68,9 @@ The Spinner component consists of the following parts:
 export default () => <Spinner />;
 ```
 
-## API Reference
+### API Reference
 
-### Spinner
+#### Spinner
 
 Contains all Spinner related layout style props and actions.
 It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activity-indicator#props) component.
@@ -78,13 +78,13 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
 <br />
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Spinner
+### Customizing the Spinner
 
 We have a function called `createSpinner` which can be used to create a custom `Spinner` component. This function takes in a configuration object which contains the styled components that you want to use for the spinner. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
