--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -20,7 +20,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -55,7 +55,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Pressable` component to your project.
 
@@ -63,7 +63,7 @@ This command copies the `Pressable` component to your project.
 npx gluestack-ui add pressable
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -72,7 +72,7 @@ import { Pressable } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The pressable component consists of the following parts:
 
@@ -84,22 +84,22 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Pressable
+#### Pressable
 
 It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
 
 <br />
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Pressable
+### Customizing the Pressable
 
 For customizing the Pressable, you have to map styled view to Pressable. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
