--- a/example/storybook/src/components/Forms/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Tabs/index.stories.mdx
@@ -27,7 +27,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -68,7 +68,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Tabs` component to your project.
 
@@ -76,7 +76,7 @@ This command copies the `Tabs` component to your project.
 npx gluestack-ui add tabs
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -85,7 +85,7 @@ import { Tabs } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The tabs component consists of the following parts:
 
@@ -112,39 +112,39 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Tabs
-
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-### Tabs.TabList
+#### Tabs
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### Tabs.Tab
+#### Tabs.TabList
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### Tabs.TabTitle
+#### Tabs.Tab
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+#### Tabs.TabTitle
 
 It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/view#props) component.
 
-### Tabs.TabPanels
+#### Tabs.TabPanels
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### Tabs.TabPanel
+#### Tabs.TabPanel
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-## Features
+### Features
 
 - Keyboard support for actions.
 - Support for hover, focus and active states.
 - Option to add your styles or use the default styles.
 
-## Dependencies
+### Dependencies
 
 - `@gluestack-ui/tabs`
 - `@gluestack-ui/utils`
@@ -154,13 +154,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 <br />
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Tabs
+### Customizing the Tabs
 
 We have a function called `createTabs` which can be used to create a custom tabs component. This function takes in a configuration object which contains the styled components that you want to use for the tabs. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
