--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -21,7 +21,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -56,7 +56,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Box` component to your project.
 
@@ -64,7 +64,7 @@ This command copies the `Box` component to your project.
 npx gluestack-ui add box
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -73,7 +73,7 @@ import { Box } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The box component consists of the following parts:
 
@@ -85,18 +85,18 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Box
+#### Box
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 <br />
 <br />
 
-## Examples
+### Examples
 
-### Box with ref
+#### Box with ref
 
 <AppProvider>
   <CodePreview
@@ -131,13 +131,13 @@ return (
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Box
+### Customizing the Box
 
 For customizing the Box, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
