--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -20,7 +20,7 @@ import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -48,7 +48,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Center` component to your project.
 
@@ -56,7 +56,7 @@ This command copies the `Center` component to your project.
 npx gluestack-ui add center
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -65,7 +65,7 @@ import { Center } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The center component consists of the following parts:
 
@@ -77,9 +77,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Center
+#### Center
 
 It inherits all the properties of React Native's [Center](https://reactnative.dev/docs/view#props) component.
 
@@ -88,13 +88,13 @@ It inherits all the properties of React Native's [Center](https://reactnative.de
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Center
+### Customizing the Center
 
 For customizing the Center, you have to map styled view to Center. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
