--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -20,7 +20,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -50,7 +50,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Divider` component to your project.
 
@@ -58,7 +58,7 @@ This command copies the `Divider` component to your project.
 npx gluestack-ui add divider
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -67,7 +67,7 @@ import { Divider } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The Divider component consists of the following parts:
 
@@ -75,18 +75,18 @@ The Divider component consists of the following parts:
 export default () => <Divider />;
 ```
 
-## API Reference
+### API Reference
 
-### Divider
+#### Divider
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 <br />
 <br />
 
-## Examples
+### Examples
 
-### Variants
+#### Variants
 
 <AppProvider>
   <CodePreview
@@ -131,13 +131,13 @@ argsType: {},
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Divider
+### Customizing the Divider
 
 For customizing the Divider, you have to map styled view to Divider. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
