--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -27,7 +27,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -55,7 +55,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `HStack` component to your project.
 
@@ -63,7 +63,7 @@ This command copies the `HStack` component to your project.
 npx gluestack-ui add hstack
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -72,7 +72,7 @@ import { HStack } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The HStack component consists of the following parts:
 
@@ -85,9 +85,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### HStack
+#### HStack
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
@@ -135,9 +135,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 <br />
 <br />
 
-## Examples
+### Examples
 
-### HStack Reversed
+#### HStack Reversed
 
 <AppProvider>
   <CodePreview
@@ -162,13 +162,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the HStack
+### Customizing the HStack
 
 We have a function called `createHStack` which can be used to create a custom HStack component. This function takes in a configuration object which contains the styled components that you want to use for the HStack. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
