--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -28,7 +28,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -103,7 +103,7 @@ function App(){
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `AlertDialog` component to your project.
 
@@ -111,7 +111,7 @@ This command copies the `AlertDialog` component to your project.
 npx gluestack-ui add alert-dialog
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -120,7 +120,7 @@ import { AlertDialog } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The alert-dialog component consists of the following parts:
 
@@ -139,9 +139,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### AlertDialog
+#### AlertDialog
 
 Contains all button related layout style props and actions.
 It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
@@ -363,31 +363,31 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
   </TableContainer>
 </AppProvider>
 
-### AlertDialog.Backdrop
+#### AlertDialog.Backdrop
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### AlertDialog.CloseButton
+#### AlertDialog.CloseButton
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### AlertDialog.Header
+#### AlertDialog.Header
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### AlertDialog.Body
+#### AlertDialog.Body
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-### AlertDialog.Footer
+#### AlertDialog.Footer
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-## Accessibility
+### Accessibility
 
 Uses React Native ARIA [@react-native-aria/focus](https://react-native-aria.geekyants.com/docs/FocusScope) which follows the [Dialog AlertDialog WAI-ARIA design pattern](https://www.w3.org/WAI/ARIA/apg/#dialog_alert-dialog).
 
-## Dependencies
+### Dependencies
 
 - `@gluestack-ui/utils`
 - `@react-native-aria/focus`
@@ -401,13 +401,13 @@ Uses React Native ARIA [@react-native-aria/focus](https://react-native-aria.geek
 <br />
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the AlertDialog
+### Customizing the AlertDialog
 
 We have a function called `createAlertDialog` which can be used to create a custom alert-dialog component. This function takes in a configuration object which contains the styled components that you want to use for the alert-dialog. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
