--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -27,7 +27,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -71,7 +71,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Tooltip` component to your project.
 
@@ -79,7 +79,7 @@ This command copies the `Tooltip` component to your project.
 npx gluestack-ui add tooltip
 ```
 
-## Import
+### Import
 
 ```jsx
 // import the component from your components folder
@@ -88,7 +88,7 @@ import { Tooltip } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 ```jsx
 export default () => (
@@ -98,9 +98,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Tooltip
+#### Tooltip
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
@@ -241,16 +241,16 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   </TableContainer>
 </AppProvider>
 
-### Tooltip.Content
+#### Tooltip.Content
 
 Contains all backdrop related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-## Accessibility
+### Accessibility
 
 Adheres to the [TOOLTIP WAI-ARIA design pattern]('https://www.w3.org/WAI/ARIA/apg/#tooltip').
 
-## Dependencies
+### Dependencies
 
 - `@gluestack-ui/hooks`
 - `@gluestack-ui/overlay`
@@ -261,13 +261,13 @@ Adheres to the [TOOLTIP WAI-ARIA design pattern]('https://www.w3.org/WAI/ARIA/ap
 - `@react-native-aria/overlays`
 - `react-native-svg`
 
-# Advanced
+## Advanced
 
-## Customizing the Tooltip
+### Customizing the Tooltip
 
 We have a function called `createTooltip` which can be used to create a custom tooltip component. This function takes in a configuration object which contains the styled components that you want to use for the Tooltip. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
