--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -17,7 +17,7 @@ import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Installation
+## Installation
 
 This command copies the `Provider` component to your project.
 
@@ -27,7 +27,7 @@ npx gluestack-ui add provider
 
 <br />
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -83,7 +83,7 @@ argsType: {},
 </AppProvider>
 <br />
 
-## Anatomy
+### Anatomy
 
 The Provider component consists of the following parts:
 
@@ -95,18 +95,18 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### Provider
+#### Provider
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 <br />
 <br />
 
-## Examples
+### Examples
 
-### Multiple providers
+#### Multiple providers
 
 <AppProvider>
   <CodePreview
@@ -154,13 +154,13 @@ function App(){
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Provider
+### Customizing the Provider
 
 We have a function called `createProvider` which can be used to create provider with `StyledProvider` exported from `@dank-style/react`. You can pass configuration object which consists theme. You can change the theme object specific to your brand. Refer [dank.style](https://dank.style/) for more information on how to create a theme.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the createProvider function
