--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -25,7 +25,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -48,7 +48,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `Heading` component to your project.
 
@@ -56,7 +56,7 @@ This command copies the `Heading` component to your project.
 npx gluestack-ui add heading
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -65,7 +65,7 @@ import { Heading } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The heading component consists of the following parts:
 
@@ -73,9 +73,9 @@ The heading component consists of the following parts:
 export default () => <Heading>Heading</Heading>;
 ```
 
-## API Reference
+### API Reference
 
-### Heading
+#### Heading
 
 It inherits all the properties of @expo/html-elements's [H1](https://github.com/expo/expo/tree/main/packages/html-elements) component.
 
@@ -84,13 +84,13 @@ It inherits all the properties of @expo/html-elements's [H1](https://github.com/
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the Heading
+### Customizing the Heading
 
 For customizing the Heading, you have to map styled view to Heading. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```bash
 // import the styles
