--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -138,7 +138,7 @@ Add the font name in the `gluestack.config.js` file in the `fonts` object.
       },
 ```
 
-## Advance concepts for fonts in gluestack-ui
+## Advanced concepts for fonts in gluestack-ui
 
 In gluestack-ui, components are styled using `styled` provided by `@dank-style/react` package, [check here]('https://dank.style/').
 This package provides a way to add plugins using `createStyled` function.
