--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -20,14 +20,13 @@ import {
   AppProvider,
   CodePreview,
   Table,
-  TableContainer,
   Text,
   InlineCode,
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
 
-# Basic
+## Basic
 
 <AppProvider>
   <CodePreview
@@ -55,7 +54,7 @@ import Wrapper from '../../Wrapper';
 </AppProvider>
 <br />
 
-# Installation
+## Installation
 
 This command copies the `VStack` component to your project.
 
@@ -63,7 +62,7 @@ This command copies the `VStack` component to your project.
 npx gluestack-ui add vstack
 ```
 
-## Import
+### Import
 
 ```bash
 // import the component from your components folder
@@ -72,7 +71,7 @@ import { VStack } from './components';
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The VStack component consists of the following parts:
 
@@ -85,9 +84,9 @@ export default () => (
 );
 ```
 
-## API Reference
+### API Reference
 
-### VStack
+#### VStack
 
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
@@ -135,9 +134,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 <br />
 <br />
 
-## Examples
+### Examples
 
-### VStack Reversed
+#### VStack Reversed
 
 <AppProvider>
   <CodePreview
@@ -162,13 +161,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <br />
 
-# Advanced
+## Advanced
 
-## Customizing the VStack
+### Customizing the VStack
 
 We have a function called `createVStack` which can be used to create a custom VStack component. This function takes in a configuration object which contains the styled components that you want to use for the VStack. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
