--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -32,7 +32,7 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Installation
+## Installation
 
 This command copies the `Icon` component to your project.
 
@@ -40,11 +40,11 @@ This command copies the `Icon` component to your project.
 npx gluestack-ui add icon
 ```
 
-## Usage
+### Usage
 
 <br />
 
-### Lucide Icons (Recommended)
+#### Lucide Icons (Recommended)
 
 [Lucide]("https://lucide.dev/docs/lucide-react-native") is an open source icon library for displaying icons for react-native. Gluestack ui provides an easy integration with lucide icons.
 
@@ -97,7 +97,7 @@ export const IconExample = ({ ...props }: any) => {
 };
 ```
 
-### SVG & Custom Icons
+#### SVG & Custom Icons
 
 We can directly create Icon using createIcon function exported from `@gluestack-ui/icon` and use it by passing it in `as` prop in Icon.
 CreateIcon function takes StyledIcon, viewBox, d, path as parameters. We can take svgs from other icon libraries like fluent, react-icons etc.
@@ -163,7 +163,7 @@ Gluestack-ui provides a set of pre created icons that can be used directly in ou
 
 <br />
 
-## Anatomy
+### Anatomy
 
 The icon component consists of the following parts:
 
@@ -171,23 +171,23 @@ The icon component consists of the following parts:
 export default () => <Icon as={} />;
 ```
 
-## API Reference
+### API Reference
 
-### Icon
+#### Icon
 
 Pre built icons provided by gluestack-ui inherits all the properties of React Native SVG's [svg](https://github.com/software-mansion/react-native-svg/tree/main/Example) component.
 
 The Icon components inherits all the properties that third party library provides and can be directly applied as props.
 
-## Features
+### Features
 
 - support of props on any svg icon
 
-## Accessibility
+### Accessibility
 
 Role: img is passed
 
-## Dependencies
+### Dependencies
 
 - `@gluestack-ui/utils`
 - `react-native-svg`
@@ -195,9 +195,9 @@ Role: img is passed
 <br />
 <br />
 
-## Example
+### Example
 
-### All gluestack icons
+#### All gluestack icons
 
 <AppProvider>
   <CodePreview
@@ -277,13 +277,13 @@ Role: img is passed
   />
 </AppProvider>
 
-# Advanced
+## Advanced
 
-## Customizing the Icon
+### Customizing the Icon
 
 We have a function called `createIcon` which can be used to create a custom icon component. This function takes in a configuration object which contains the styled components that you want to use for the icon. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
-### Usage
+#### Usage
 
 ```jsx
 // import the styles
