--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -14,11 +14,11 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Installation" />
 
-# Installation
+## Installation
 
 To get started with gluestack-ui, you can install it using `npx` to do initial setup and add any desired component package.
 
-## Initialiser (Step 1)
+### Initialiser (Step 1)
 
 To do the initial setup run:
 
@@ -37,7 +37,7 @@ This will:
 
 <br />
 
-## Component Adder (Step 2)
+### Component Adder (Step 2)
 
 We can add a new component using npx `npx npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
 
@@ -65,7 +65,7 @@ function App() {
 
 For components to work properly we need to wrap our components with `<GluestackUIProvider/>` and pass the theme from `gluestack-ui.config.ts` file.
 
-### Next.js Projects
+#### Next.js Projects
 
 For Next.js Projects update \_app.tsx with the below code:
 
@@ -84,7 +84,7 @@ export default function App({ Component, pageProps }: AppProps) {
 }
 ```
 
-### Expo Projects
+#### Expo Projects
 
 For Expo Projects update App.tsx with the below code:
 
@@ -105,40 +105,39 @@ export default function App() {
 }
 ```
 
-## Commands provided by gluestack-ui
+### Commands provided by gluestack-ui
 
-
-### Init gluestack-ui
+#### Init gluestack-ui
 
 ```bash
  npx gluestack-ui init
 ```
 
-### Init and add components
+#### Init and add components
 
 ```bash
   npx gluestack-ui
 ```
 
-### Add component
+#### Add component
 
 ```bash
  npx npx gluestack-ui add <component-name>
 ```
 
-### Update component
+#### Update component
 
 ```bash
  npx gluestack-ui update <component-name>
 ```
 
-### Remove component
+#### Remove component
 
 ```bash
   npx gluestack-ui remove <component-name>
 ```
 
-### Help
+#### Help
 
 ```bash
   npx gluestack-ui help
@@ -146,7 +145,7 @@ export default function App() {
 
 This will render a button component that can be clicked and will display an alert when clicked.
 
-# For Next.js Projects
+## For Next.js Projects
 
 It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for Next.js projects we require `@gluestack/ui-next-adapter` as a dependency and update \_document.js with the below code:
 
@@ -193,7 +192,7 @@ const nextConfig = {
 module.exports = withGluestackUI(nextConfig);
 ```
 
-## Summary
+### Summary
 
 In this guide, we've walked you through the process of installing gluestack-ui and adding a Button component to your project using the npx command. With gluestack-ui, you can benefit from a library of accessible and composable UI components that work seamlessly on mobile and web platforms.
 
